@startuml

' PATRON OBSERVER

' Interfaz que define el comportamiento de los observadores.
interface Observador {
    ' Metodo que recibe las notificaciones del sujeto.
    + actualizar(mensaje : String) : void
}

' Clase que mantiene una lista de observadores y notifica a todos ellos.
class Sujeto{
    ' Lista de objetos que implementan la interfaz Observer.
    - observadores : List 
    ' Constructor que inicializa la lista de observadores.
    + Sujeto()
    ' Agrega un nuevo observador a la lista.
    + agregarObservador(observador : Observador) : void
    ' Elimina un observador de la lista.
    + eliminarObservador(observador : Observador) : void
    ' Notifica a todos los observadores con un mensaje.
    + notificarObservadores(mensaje : String) : void
}

' Observador concreto. Representa a un usuario que recibe notificaciones.
class Usuario{
    ' Nombre del usuario.
    - nombre : String
    ' Constructor que recibe el nombre
    + Usuario(nombre : String)
    ' Actualiza al usuario cuando recibe una notificacion.
    + actualizar(mensaje : String) : void

}


' Sujeto mantiene una coleccion de observadores a los cuales notificar.
Sujeto o-- Observador : notifica 
' Usuario implementa la interfaz Observador.
Observador <|.. Usuario

@enduml
